# Math_RAG_Agent_System

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  submission.ipynb
assets/evaluation_result/: RAG_1000.json  RAG_500.json  baseline_1000.json  baseline_500.json
data/: test.csv  test_with_answer.csv  turn_raw_json_to_csv.py
notebooks/: evaluate_performance.ipynb
notebooks/archive/: test.ipynb
scripts/: append_answer.py  run_ingestion.py
search_db/vector_db/e540e87a-ef93-46d0-9fc8-82b8470dacbc/: index_metadata.pickle
src/: agent.py  collection.py  prompts.py
src/scripts/: run_ingestion.py
src/utils/: bm25_utils.py  preprocessor.py  solve_question.py
vector_db/25efe2b3-adb3-4971-baa1-6473a7d12936/: index_metadata.pickle
